--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobree</a>
+            <a class="nav-link" href="sobre.html">Sobree</a>
           </li>
         </ul>
       </div>
@@ -34,7 +34,7 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-6">
-        <h2>Formulário de Teste</h2>
+        <h2>Testando workflow actions</h2>
         <form id="test-form">
           <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
