--- a/sobre.html
+++ b/sobre.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOBRE</title>
 </head>
 <body>
-    
+    <h1>Pagina sobre</h1>
 </body>
 </html>
